--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -335,6 +335,12 @@ config CPU_FREQ_GOV_BIOSHOCK
 config CPU_FREQ_GOV_DARKNESS
  	tristate "'darkness' cpufreq policy governor"
 
+config FINGERPRINT_BOOST
+	bool "Fingerprint Boost"
+	default n
+	help
+	  Boosts available CPUs to max frequency on fingerprint sensor input.
+
 if X86
 source "drivers/cpufreq/Kconfig.x86"
 endif
