upstream mods, update, and improvements from Eureka kernel
Based on these: https://github.com/eurekadevelopment/Eureka-Kernel-Exynos7885-Q-R-S/commit/3209f50187aeb50eb8015e80d9a52d1e2d7d720e

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -469,6 +469,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_KSM=y
+CONFIG_UKSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -1213,7 +1214,7 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
@@ -2927,6 +2928,7 @@ CONFIG_LOGGING_BIGDATA_BUG=y
 CONFIG_DISPLAY_USE_INFO=y
 CONFIG_EXYNOS_DECON_MDNIE=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
+CONFIG_EXYNOS_DECON_MDNIE_CONTROL=y
 CONFIG_SUPPORT_POC_FLASH=y
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA3 is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA7 is not set
@@ -4379,6 +4381,7 @@ CONFIG_EXYNOS_ADC=y
 #
 # Temperature sensors
 #
+CONFIG_BYPASS_CPU_THROTTLING=y
 # CONFIG_MLX90614 is not set
 # CONFIG_TMP006 is not set
 # CONFIG_TSYS01 is not set
@@ -4561,6 +4564,7 @@ CONFIG_CCIC_NOTIFIER=y
 CONFIG_CCIC_TYPEC_PRSWAP=y
 # CONFIG_TEE is not set
 CONFIG_SENSORS_FINGERPRINT=y
+CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_SENSORS_VFS7XXX is not set
 # CONFIG_SENSORS_FPRINT_SECURE is not set
 # CONFIG_SENSORS_FINGERPRINT_32BITS_PLATFORM_ONLY is not set
@@ -4772,8 +4776,8 @@ CONFIG_SDFAT_SUPPORT_STLOG=y
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
-# CONFIG_NTFS_FS is not set
-
+#CONFIG_NTFS_FS is not set
+CONFIG_NTFS3_FS=y
 #
 # Pseudo filesystems
 #
