defconfig: enable a96t3x6 grip sensor driver

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -4578,7 +4578,7 @@ CONFIG_SENSORS_ET5XX=y
 CONFIG_SENSORS_SSP=y
 CONFIG_SENSORS_SSP_STM32=y
 # CONFIG_SSP_ENG_DEBUG is not set
-# CONFIG_SENSORS_A96T3X6 is not set
+CONFIG_SENSORS_A96T3X6=y
 CONFIG_SENSORS_SSP_ATUC128L5HAR=y
 CONFIG_SENSORS_SSP_ACCELOMETER=y
 CONFIG_SENSORS_SSP_GYROSCOPE=y
