defconfig: enable zram and zswap writeback

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -480,7 +480,7 @@ CONFIG_CMA_DEBUGFS=y
 CONFIG_CMA_AREAS=7
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_MIGRATION_SUPPORT=y
-# CONFIG_ZSWAP_ENABLE_WRITEBACK is not set
+CONFIG_ZSWAP_ENABLE_WRITEBACK=y
 CONFIG_ZSWAP_SAME_PAGE_SHARING=y
 CONFIG_ZPOOL=y
 # CONFIG_ZBUD is not set
@@ -1210,7 +1210,7 @@ CONFIG_OF_RESERVED_MEM=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
+CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
