defconfig: disable mdnie control
the device wont boot

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -2928,7 +2928,7 @@ CONFIG_LOGGING_BIGDATA_BUG=y
 CONFIG_DISPLAY_USE_INFO=y
 CONFIG_EXYNOS_DECON_MDNIE=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
-CONFIG_EXYNOS_DECON_MDNIE_CONTROL=y
+# CONFIG_EXYNOS_DECON_MDNIE_CONTROL is not set
 CONFIG_SUPPORT_POC_FLASH=y
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA3 is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA7 is not set
