--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -169,7 +169,6 @@ CONFIG_MULTIUSER=y
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
@@ -287,7 +286,6 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_SYSV68_PARTITION is not set
 # CONFIG_CMDLINE_PARTITION is not set
 CONFIG_BLOCK_COMPAT=y
-CONFIG_BLOCK_SUPPORT_STLOG=y
 
 #
 # IO Schedulers
@@ -545,7 +543,6 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=1000
 CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
 # CONFIG_PM_ADVANCED_DEBUG is not set
 # CONFIG_PM_TEST_SUSPEND is not set
 CONFIG_PM_SLEEP_DEBUG=y
@@ -588,8 +585,7 @@ CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 # CONFIG_CPU_FREQ_SCHEDUTIL_PERFSTAT_TRIGGER is not set
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_STAT_DETAILS=y
-# CONFIG_CPU_FREQ_TIMES is not set
+# CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -3444,7 +3440,6 @@ CONFIG_TYPEC=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_SUPPORT_STLOG=y
 # CONFIG_MMC_CMDQ_DEBUG is not set
 CONFIG_MMC_DATA_LOG=y
 # CONFIG_MMC_TEST_MODE is not set
@@ -3815,7 +3810,6 @@ CONFIG_SEC_DEBUG_RESET_REASON=y
 CONFIG_SEC_DEBUG_EXTRA_INFO=y
 CONFIG_SEC_DEBUG_HW_PARAM=y
 CONFIG_SEC_DEBUG_AUTO_SUMMARY=y
-CONFIG_SEC_UPLOAD=y
 CONFIG_SEC_FD_DETECT=y
 CONFIG_SEC_DEBUG_LAST_KMSG=y
 
@@ -3825,7 +3819,6 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 CONFIG_SEC_PARAM=y
 CONFIG_CM_OFFSET=7340596
 CONFIG_SEC_EVENT_LOG=y
-CONFIG_SEC_BOOTSTAT=y
 CONFIG_ARGOS=y
 # CONFIG_SEC_KWATCHER is not set
 # CONFIG_SEC_MMIOTRACE is not set
@@ -4773,7 +4766,7 @@ CONFIG_FRAME_POINTER=y
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 
 #
 # Memory Debugging
@@ -4869,7 +4862,6 @@ CONFIG_GPU_TRACEPOINTS=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_TRACING=y
 CONFIG_TRACING_SUPPORT=y
-CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
 # CONFIG_PREEMPTIRQ_EVENTS is not set
 # CONFIG_IRQSOFF_TRACER is not set
