defconfig: activate eureka sound control for testing

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -3160,6 +3160,7 @@ CONFIG_SND_SOC_DBMDX_SND_CAPTURE=y
 CONFIG_SND_SOC_DBMDX_VA_NS_SUPPORT=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
+CONFIG_EUREKA_SOUND_CONTROL=y
 
 #
 # HID support
