Hotplug: Make Exynos Hotplug driver optional

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -351,6 +351,7 @@ CONFIG_FREEZER=y
 # Samsung Exynos
 #
 CONFIG_ARCH_EXYNOS=y
+CONFIG_EXYNOS_HOTPLUG=y
 # CONFIG_SOC_EXYNOS7872 is not set
 # CONFIG_SOC_EMULATOR7872 is not set
 CONFIG_SOC_EXYNOS7885=y
