Enable SEC_INCELL and change SELINUX to FAKE ENFORCING

--- a/arch/arm64/configs/exynos7885-jackpotlte_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpotlte_defconfig
@@ -4148,7 +4148,7 @@ CONFIG_EXYNOS7885_ACPM=y
 # CONFIG_HDCP2_EMULATION_MODE is not set
 # CONFIG_EXYNOS_MCINFO is not set
 CONFIG_EXYNOS_DVFS_MANAGER=y
-# CONFIG_SEC_INCELL is not set
+CONFIG_SEC_INCELL=y
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -5113,9 +5113,9 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
-# CONFIG_SECURITY_SELINUX_FAKE_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_FAKE_ENFORCE=y
 # CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
-CONFIG_SECURITY_SELINUX_NEVER_ENFORCE=y
+# CONFIG_SECURITY_SELINUX_NEVER_ENFORCE is not set
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
